@@ -1,6 +1,8 @@
 1.03	2011-0?-??
         - API changes
-          - IRatingPredictor: Add() is now AddRating()
+          - IRatingPredictor
+           - Add() is now AddRating()
+           - remove AddUser() and AddItem()
 	- recommenders
           - new rating predictor BiasedMatrixFactorizationMAE, which is BMF
             optimized for MAE instead of RMSE
